// Vitest Snapshot v1

exports[`NewsCard > should render 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="relative h-full w-full cursor-default border-b border-theme-primary-100 bg-theme-background p-3 text-left transition-colors-shadow duration-200 dark:border-theme-secondary-800 md:rounded-lg md:border-2 md:border-b-2 md:p-5"
    >
      <div
        class="flex flex-col space-y-6 bg-theme-background p-5"
      >
        <div
          class="flex w-full justify-between"
        >
          <div
            class="flex items-center"
          >
            <div
              class="flex items-center md:hidden"
            >
              <div
                aria-label="ARK"
                class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ark"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="hidden md:block"
            >
              <div
                aria-label="ARK"
                class="text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background duration-100 css-aozgpb"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ark"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="ml-4 flex items-center space-x-2 md:flex-col md:items-start md:space-x-0"
            >
              <h4
                class="text-lg font-semibold"
                data-testid="NewsCard__asset-ARK"
              >
                ARK
              </h4>
              <div
                class="flex md:hidden"
              >
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
                  type="vertical"
                />
              </div>
              <div
                class="flex items-center space-x-2"
              >
                <p
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="NewsCard__date-created"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col justify-end"
          >
            <div
              class="css-dxblop"
              color="warning"
            >
              <span
                class="mx-1 text-sm"
                data-testid="NewsCard__category"
              >
                #Technical
              </span>
            </div>
          </div>
        </div>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-12qg4ub"
          type="horizontal"
        />
        <div
          class="whitespace-pre-line text-theme-secondary-text"
          data-testid="NewsCard__content"
        >
          Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewsCard > should render with cover image 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="relative h-full w-full cursor-default border-b border-theme-primary-100 bg-theme-background p-3 text-left transition-colors-shadow duration-200 dark:border-theme-secondary-800 md:rounded-lg md:border-2 md:border-b-2 md:p-5"
    >
      <div
        class="flex flex-col space-y-6 bg-theme-background p-5"
      >
        <div
          class="flex w-full justify-between"
        >
          <div
            class="flex items-center"
          >
            <div
              class="flex items-center md:hidden"
            >
              <div
                aria-label="ARK"
                class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ark"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="hidden md:block"
            >
              <div
                aria-label="ARK"
                class="text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background duration-100 css-aozgpb"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ark"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="ml-4 flex items-center space-x-2 md:flex-col md:items-start md:space-x-0"
            >
              <h4
                class="text-lg font-semibold"
                data-testid="NewsCard__asset-ARK"
              >
                ARK
              </h4>
              <div
                class="flex md:hidden"
              >
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
                  type="vertical"
                />
              </div>
              <div
                class="flex items-center space-x-2"
              >
                <p
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="NewsCard__date-created"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col justify-end"
          >
            <div
              class="css-dxblop"
              color="warning"
            >
              <span
                class="mx-1 text-sm"
                data-testid="NewsCard__category"
              >
                #Marketing
              </span>
            </div>
          </div>
        </div>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-12qg4ub"
          type="horizontal"
        />
        <div
          class="whitespace-pre-line text-theme-secondary-text"
          data-testid="NewsCard__content"
        >
          June is over and it's time for the Monthly Update. This blog post will cover last month’s highlights, activities, development, partner activities, news and updates of our upcoming releases. 
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
        <div
          class="-mx-10 flex justify-center border-t-2 border-theme-primary-100 p-1 dark:border-theme-secondary-800"
        >
          <img
            alt="ARKVault Banner"
            src="https://via.placeholder.com/150"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
